# onnxinfer

./: CMakeLists.txt  README.md  YOLOV5.cpp  config.json  main.cpp
include/: YOLOV5.hpp
onnxinfer/: CMakeLists.txt
onnxinfer-nms-CUDA/: CMakeLists.txt
onnxinfer-nms-CUDA/config/: config.json
onnxinfer-nms-CUDA/include/: YOLOV5.hpp  common.hpp  cuda_utils.h
onnxinfer-nms-CUDA/plugins/: NMS.cu  NMS.h
onnxinfer-nms-CUDA/src/: YOLOV5.cpp  main.cpp
onnxinfer/include/: Motion.hpp  YOLOV5.hpp  common.hpp
onnxinfer/src/: YOLOV5.cpp  main.cpp
